--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -1,3 +1,7 @@
+body{
+    background-color: #ebd5b3;
+    font-family: 'Gentium Book Basic', serif;
+}
 .searchForm{
     text-align: center;
     background-color: #ebd5b3;
@@ -8,6 +12,9 @@
     border-radius: 1rem;
     padding: 1%;
     color: brown;
+    border: solid brown;
+    background-color: #ebd5b3;
+
 }
 .searchButton{
     padding: 1%;
